# E2EAIEngineering

./: .gitignore  docker-compose.yml  env-example  makefile  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  retrieval_generation.py
apps/api/src/api/agents/prompts/: retrieval_generation.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  models.py
apps/api/src/api/core/: Untitled  config.py
apps/chatbot_ui/: dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: Untitled  config.py
notebooks/Prerequisites/: 01-llm-apis.ipynb
notebooks/week1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-dataset.ipynb  03-RAG-pipeline.ipynb  04-Observability-foundations.ipynb  05-RAG-Eval-Dataset.ipynb  06-RAG-Evals.ipynb
notebooks/week2/: 01-structured-outputs-intro.ipynb  02.structures-outputs-RAG-pipeline.ipynb  03-Hybrid-Search.ipynb  04-reranking.ipynb  05-Prompt-Management.ipynb  06-Eval-Dataset-Large.ipynb
