[project]
name = "e2eaiengineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "langsmith>=0.10.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "langchain-community>=0.4.0,<0.4.2",
    "matplotlib>=3.11.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
]
